# wayland_clipboard

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
